--- a/index.html
+++ b/index.html
@@ -431,14 +431,14 @@
         <div class="reveal pt-6" style="--d: 480ms">
           <p class="text-sm text-gray-500 mb-3">Follow my work</p>
           <div class="social flex items-center gap-4 text-gray-400">
-            <a href="#" class="hover:text-white  transition" aria-label="GitHub">
+            <a href="https://github.com/emmanuel-lemos" target="_blank" class="hover:text-white  transition" aria-label="GitHub">
               <span class="inline-flex w-10 h-10 rounded-full border border-gray-800 bg-white/5 items-center justify-center">GH</span>
             </a>
-            <a href="#" class="hover:text-white transition" aria-label="Twitter/X">
-              <span class="inline-flex w-10 h-10 rounded-full border border-gray-800 bg-white/5 items-center justify-center">X</span>
+            <a href="https://www.instagram.com/2n.dev" target="_blank" class="hover:text-white transition" aria-label="Instagram">
+              <span class="inline-flex w-10 h-10 rounded-full border border-gray-800 bg-white/5 items-center justify-center">IG</span>
             </a>
-            <a href="#" class="hover:text-white transition" aria-label="LinkedIn">
-              <span class="inline-flex w-10 h-10 rounded-full border border-gray-800 bg-white/5 items-center justify-center">in</span>
+            <a href="https://www.linkedin.com/in/emmanuel-lemos-1a2400125/" target="_blank" class="hover:text-white transition" aria-label="LinkedIn">
+              <span class="inline-flex w-10 h-10 rounded-full border border-gray-800 bg-white/5 items-center justify-center">iN</span>
             </a>
           </div>
         </div>
@@ -543,7 +543,7 @@
                 </span>
 
                 <span class="orb-item">
-                  <span class="orb-icon"><svg><use href="/assets/icons/icons.svg#postgresql"></use></svg></span>
+                  <span class="orb-icon"><svg><use href="/assets/icons/icons.svg#sqldb"></use></svg></span>
                 </span>
 
                 <span class="orb-item">
@@ -607,7 +607,7 @@
 
             <ul class="relative mt-6 flex flex-wrap gap-3">
               <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#react"></use></svg><span>React</span></li>
-              <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#nextjs"></use></svg><span>Next.js</span></li>
+              <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#javascript"></use></svg><span>Javascript</span></li>
               <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#typescript"></use></svg><span>TypeScript</span></li>
               <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#tailwind"></use></svg><span>Tailwind CSS</span></li>
               <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#html5"></use></svg><span>HTML5</span></li>
@@ -632,9 +632,9 @@
             </header>
 
             <ul class="relative mt-6 flex flex-wrap gap-3">
-              <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#nodejs"></use></svg><span>Node.js</span></li>
               <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#python"></use></svg><span>Python</span></li>
-              <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#postgresql"></use></svg><span>PostgreSQL</span></li>
+              <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#nodejs"></use></svg><span>Node.js</span></li>
+              <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#sqldb"></use></svg><span>SQLAlchemy</span></li>
               <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#fastapi"></use></svg><span>FastAPI</span></li>
               <li class="skill-pill"><span data-i18n="skills_pill_rest">REST APIs</span></li>
             </ul>
@@ -661,7 +661,6 @@
               <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#figma"></use></svg><span>Figma</span></li>
               <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#premiere"></use></svg><span>Adobe Premiere Pro</span></li>
               <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#canva"></use></svg><span>Canva</span></li>
-              <li class="skill-pill"><span data-i18n="skills_pill_prototyping">Prototyping</span></li>
             </ul>
           </article>
 
@@ -682,9 +681,7 @@
             </header>
 
             <ul class="relative mt-6 flex flex-wrap gap-3">
-              <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#aws"></use></svg><span>AWS</span></li>
               <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#docker"></use></svg><span>Docker</span></li>
-              <li class="skill-pill"><span data-i18n="skills_pill_cicd">CI/CD</span></li>
               <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#github"></use></svg><span>GitHub</span></li>
               <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#git"></use></svg><span>Git</span></li>
               <li class="skill-pill"><svg class="skill-ico"><use href="/assets/icons/icons.svg#linux"></use></svg><span>Linux</span></li>
@@ -1046,8 +1043,8 @@
 
                     <!-- LINKS -->
                     <div class="project-links">
-                      <a href="#" class="primary-link" data-i18n="btn_behance">Behance</a>
-                      <a href="#" class="secondary-link" data-i18n="btn_case">Case</a>
+                      <a href="https://www.behance.net/gallery/156120573/Moura-Burger" target="_blank" class="primary-link" data-i18n="btn_behance">Behance</a>
+                      <a href="https://www.instagram.com/mouraburgergrill?igsh=MTZmMXdnbHFuM3V5eg==" target="_blank" class="secondary-link" data-i18n="btn_case">Live</a>
                     </div>
                   </div>
                 </article>
@@ -1080,8 +1077,8 @@
 
                     <!-- LINKS -->
                     <div class="project-links">
-                      <a href="#" class="primary-link" data-i18n="btn_behance">Behance</a>
-                      <a href="#" class="secondary-link" data-i18n="btn_case">Case</a>
+                      <a href="https://www.behance.net/gallery/156121781/Engenheira-Civil-RA" target="_blank" class="primary-link" data-i18n="btn_behance">Behance</a>
+                      <a href="https://www.behance.net/gallery/156121781/Engenheira-Civil-RA" target="_blank" class="secondary-link" data-i18n="btn_case">Live</a>
                     </div>
                   </div>
                 </article>
@@ -1113,8 +1110,8 @@
 
                     <!-- LINKS -->
                     <div class="project-links">
-                      <a href="#" class="primary-link" data-i18n="btn_behance">Behance</a>
-                      <a href="#" class="secondary-link" data-i18n="btn_case">Case</a>
+                      <a href="https://www.behance.net/gallery/156123191/Cardapio-Digital-Confeitaria" target="_blank" class="primary-link" data-i18n="btn_behance">Behance</a>
+                      <a href="https://www.behance.net/gallery/156123191/Cardapio-Digital-Confeitaria" target="_blank" class="secondary-link" data-i18n="btn_case">Live</a>
                     </div>
                   </div>
                 </article>
@@ -1214,8 +1211,8 @@
 
                     <!-- LINKS -->
                     <div class="project-links">
-                      <a href="#" class="primary-link" data-i18n="btn_repo">Repository</a>
-                      <a href="#" class="secondary-link" data-i18n="btn_live">Online</a>
+                      <a href="https://github.com/emmanuel-lemos/fastapi-order-management-api" target="_blank" class="primary-link" data-i18n="btn_repo">Repository</a>
+                      <a href="https://github.com/emmanuel-lemos/fastapi-order-management-api" target="_blank" class="secondary-link" data-i18n="btn_live">Online</a>
                     </div>
                   </div>
                 </article>
@@ -1249,8 +1246,8 @@
 
                     <!-- LINKS -->
                     <div class="project-links">
-                      <a href="#" class="primary-link" data-i18n="btn_repo">Repository</a>
-                      <a href="#" class="secondary-link" data-i18n="btn_live">Online</a>
+                      <a href="https://github.com/emmanuel-lemos/emmanuel-lemos-portfolio" target="_blank" class="primary-link" data-i18n="btn_repo">Repository</a>
+                      <a href="https://github.com/emmanuel-lemos/emmanuel-lemos-portfolio" target="_blank" class="secondary-link" data-i18n="btn_live">Online</a>
                     </div>
                   </div>
                 </article>
@@ -1364,7 +1361,7 @@
 
                     <div class="contact-info-txt">
                       <p class="contact-info-label" data-i18n="contact_email_label">Email</p>
-                      <a id="contactEmail" class="contact-info-value" href="mailto:email@provedor.com">emai@provedor.com</a>
+                      <a id="contactEmail" class="contact-info-value" href="mailto:myd.artcore@gmail.com">myd.artcore@gmail.com</a>
                     </div>
                   </div>
 
@@ -1512,7 +1509,8 @@
 
             <!-- Instagram -->
             <a id="linkInstagram"
-              href="#"
+              href="https://www.instagram.com/2n.dev"
+              target="_blank"
               aria-label="Instagram"
               class="text-white hover:text-purple-500 transition transform hover:-translate-y-1"
             >
