chore: add new slide photo and favicons

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="/assets/images/favicon-96x96.png" sizes="96x96" />
+      <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg" />
+      <link rel="shortcut icon" href="/assets/images/favicon.ico" />
+      <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png" />
+      <meta name="apple-mobile-web-app-title" content="Emmanuel Lemos Portfolio" />
+      <link rel="manifest" href="/assets/images/site.webmanifest" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emmanuel Lemos - Portfolio</title>
@@ -1222,7 +1228,7 @@
                   <!-- PREVIEW -->
                   <div class="project-preview">
                     <img
-                      src="/assets/images/slide_teste.jpg"
+                      src="/assets/images/slide_port.jpg"
                       alt="Emmanuel Lemos Portfolio"
                       loading="lazy"
                     />
@@ -1247,7 +1253,7 @@
                     <!-- LINKS -->
                     <div class="project-links">
                       <a href="https://github.com/emmanuel-lemos/emmanuel-lemos-portfolio" target="_blank" class="primary-link" data-i18n="btn_repo">Repository</a>
-                      <a href="https://github.com/emmanuel-lemos/emmanuel-lemos-portfolio" target="_blank" class="secondary-link" data-i18n="btn_live">Online</a>
+                      <a href="https://emmanuel-lemos.vercel.app/" target="_blank" class="secondary-link" data-i18n="btn_live">Online</a>
                     </div>
                   </div>
                 </article>
