chore: add curriculo/resume link  pt-br

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 
           <a
             id="cvLink"
-            download
+            href="https://drive.google.com/file/d/11nVcE03LmTQo1RC66LpXFohjDtNdbCkb/view?usp=sharing"
             class="inline-flex items-center gap-2 px-6 py-3 rounded-xl border border-gray-700 hover:border-purple-500 transition text-gray-100 bg-white/5"
             data-i18n="hero_cv"
             >
