chore:profile img correction

--- a/index.html
+++ b/index.html
@@ -459,6 +459,7 @@
             id="avatarImg"
             src="/assets/images/profile_teste1.jpg"
             alt="Emmanuel photo"
+            loading="lazy"
             class="w-full h-full object-cover" />
         </div>
         </div>
