--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 <main class="h-screen overflow-y-scroll scroll-smooth snap-y snap-mandatory overflow-x-hidden">
 
 <section id="home" class="snap-start h-screen w-full border-t border-gray-800 relative overflow-hidden">
-  <div class="max-w-7xl mx-auto h-full w-full px-6 md:px-12 lg:px-24 pt-24 md:pt-28">
+  <div class="max-w-7xl mx-auto h-full w-full px-6 md:px-12 lg:px-24 pt-20 md:pt-28">
     <div class="h-full grid grid-cols-1 lg:grid-cols-2 gap-14 items-start">
 
       <!-- LEFT -->
@@ -753,7 +753,7 @@
 <section id="experience" class="snap-start min-h-screen w-full  relative overflow-hidden">
   <div class="min-h-screen flex items-center">
     <div class="w-full">
-      <div class="max-w-7xl mx-auto px-6 md:px-12 lg:px-24 py-8">
+      <div class="max-w-7xl mx-auto px-6 md:px-12 lg:px-24 ">
         <div class="space-y-16">
 
           <!-- HEADER (hero/skills-like) -->
@@ -998,7 +998,7 @@
     >
       <div class="h-full flex flex-col">
         <!-- TAG/CHIP  -->
-        <header class="max-w-7xl mx-auto w-full px-6 md:px-12 lg:px-24 pt-24">
+        <header class="max-w-7xl mx-auto w-full px-6 md:px-12 lg:px-24 section-head">
           <div
             class="section-chip"
             data-reveal
@@ -1172,7 +1172,7 @@
       class="snap-start h-screen w-full border-t border-gray-800 overflow-x-hidden"
     >
       <div class="h-full flex flex-col">
-        <header class="max-w-7xl mx-auto w-full px-6 md:px-12 lg:px-24 pt-24">
+        <header class="max-w-7xl mx-auto w-full px-6 md:px-12 lg:px-24 section-head">
           <div class="section-chip" data-reveal style="--d: 0ms" aria-label="Dev Projects">
             <span class="section-dot"></span>
             <span data-i18n="chip_dev">Dev Projects</span>
@@ -1302,11 +1302,15 @@
           </div>
         </div>
       </div>
+    
     </section>
+
+    <div class="dev-bottom-space" aria-hidden="true"></div>
+  </div>
     
 <section id="contact" class="snap-start min-h-screen w-full flex">
   <div class="w-full">
-    <div class="max-w-7xl mx-auto w-full px-6 md:px-12 lg:px-24 py-12 md:py-14">
+    <div class="max-w-7xl mx-auto w-full px-6 md:px-12 lg:px-24 md:py-2">
 
       <div class="flex flex-col items-center">
 
