chore: correct snap and project viewport on desktop

--- a/index.html
+++ b/index.html
@@ -321,7 +321,6 @@
 
     <!-- Footer -->
     <div class="absolute left-0 right-0 bottom-0 px-6 pb-8">
-      <div class="h-px bg-white/10 mb-6"></div>
 <a
   href="#contact"
   class="w-full h-14 rounded-full bg-white/90 text-black
@@ -994,178 +993,174 @@
   </div>
 </section>
 
-<section id="design-projects" class="snap-start h-screen w-full border-t border-gray-800 overflow-x-hidden"
-    >
-      <div class="h-full flex flex-col">
-        <!-- TAG/CHIP  -->
+<section id="design-projects" class="snap-start h-screen w-full border-t border-gray-800 overflow-x-hidden">
+  <div class="h-full flex flex-col">
+
         <header class="max-w-7xl mx-auto w-full px-6 md:px-12 lg:px-24 section-head">
-          <div
-            class="section-chip"
-            data-reveal
-            style="--d: 0ms"
-            aria-label="Design Projects"
-          >
+          <div class="section-chip" data-reveal style="--d: 0ms" aria-label="Design Projects">
             <span class="section-dot"></span>
             <span data-i18n="chip_design">Design Projects</span>
           </div>
         </header>
 
-        <!-- VIEWPORT -->
-        <div class="flex-1 min-h-0 w-full flex items-start md:items-center">
-          <div class="w-full overflow-hidden flex justify-center">
-            <div
-              id="design-viewport"
-              class="w-full overflow-hidden relative"
-              data-reveal
-              style="--d: 90ms"
-            >
-              <!-- TRACK -->
-              <div id="design-carousel" class="flex gap-24 will-change-transform w-max">
-                <!-- SLIDE 1 -->
-                <article class="carousel-slide min-w-[80vw] lg:min-w-[65vw] flex flex-col items-center">
-                  <!-- PREVIEW  -->
-                  <div class="project-preview">
-                    <img
-                      src="/assets/images/slide_mb.jpg"
-                      alt="Moura Burger - Hamburgueria"
-                      loading="lazy"
-                    />
-                  </div>
+    <!-- VIEWPORT -->
+    <div class="flex-1 min-h-0 w-full flex items-start md:items-center">
+      <div class="w-full overflow-hidden flex justify-center">
+        <div
+          id="design-viewport"
+          class="w-full overflow-hidden relative"
+          data-reveal
+          style="--d: 90ms"
+        >
 
-                  <!-- TEXTO  -->
-                  <div class="project-meta">
-                    <h3 class="project-title" data-i18n="proj_design_title_1">Project Title</h3>
-
-                    <p class="project-desc" data-i18n="proj_design_desc_1">
-                      Project Description.
-                    </p>
-
-                    <!-- STACKS  -->
-                    <div class="project-stacks" aria-label="Stacks">
-                      <span class="stack-pill" data-i18n="stack_pill_1_1">Stack Pill 1</span>
-                      <span class="stack-pill" data-i18n="stack_pill_1_2">Stack Pill 2</span>
-                      <span class="stack-pill" data-i18n="stack_pill_1_3">Stack Pill 3</span>
-                    </div>
-
-                    <!-- LINKS -->
-                    <div class="project-links">
-                      <a href="https://www.behance.net/gallery/156120573/Moura-Burger" target="_blank" class="primary-link" data-i18n="btn_behance">Behance</a>
-                      <a href="https://www.instagram.com/mouraburgergrill?igsh=MTZmMXdnbHFuM3V5eg==" target="_blank" class="secondary-link" data-i18n="btn_case">Live</a>
-                    </div>
-                  </div>
-                </article>
-
-                <!-- SLIDE 2 -->
-                <article class="carousel-slide min-w-[80vw] lg:min-w-[65vw] flex flex-col items-center">
-                  <!-- PREVIEW  -->
-                  <div class="project-preview">
-                    <img
-                      src="/assets/images/slide_ra.jpg"
-                      alt="Raquel Alves - Engenheira Civil"
-                      loading="lazy"
-                    />
-                  </div>
-
-                  <!-- TEXTO  -->
-                  <div class="project-meta">
-                    <h3 class="project-title" data-i18n="proj_design_title_2">Project Title</h3>
-
-                    <p class="project-desc" data-i18n="proj_design_desc_2">
-                      Project Description
-                    </p>
-
-                    <!-- STACKS  -->
-                    <div class="project-stacks" aria-label="Stacks">
-                      <span class="stack-pill" data-i18n="stack_pill_2_1">Stack Pill 1</span>
-                      <span class="stack-pill" data-i18n="stack_pill_2_2">Stack Pill 2</span>
-                      <span class="stack-pill" data-i18n="stack_pill_2_3">Stack Pill 3</span>
-                    </div>
-
-                    <!-- LINKS -->
-                    <div class="project-links">
-                      <a href="https://www.behance.net/gallery/156121781/Engenheira-Civil-RA" target="_blank" class="primary-link" data-i18n="btn_behance">Behance</a>
-                      <a href="https://www.behance.net/gallery/156121781/Engenheira-Civil-RA" target="_blank" class="secondary-link" data-i18n="btn_case">Live</a>
-                    </div>
-                  </div>
-                </article>
-
-                <!-- SLIDE 3 -->
-                <article class="carousel-slide min-w-[80vw] lg:min-w-[65vw] flex flex-col items-center">
-                  <!-- PREVIEW  -->
-                  <div class="project-preview">
-                    <img
-                      src="/assets/images/slide_ma.jpg"
-                      alt="Chocolate - Doces"
-                      loading="lazy"
-                    />
-                  </div>
-
-                  <!-- TEXTO  -->
-                  <div class="project-meta">
-                    <h3 class="project-title" data-i18n="proj_design_title_3">Project Title</h3>
-
-                    <p class="project-desc" data-i18n="proj_design_desc_3">
-                      Project Description
-                    </p>
-
-                    <!-- STACKS  -->
-                    <div class="project-stacks" aria-label="Stacks">
-                      <span class="stack-pill" data-i18n="stack_pill_3_1">Stack Pill 1</span>
-                      <span class="stack-pill" data-i18n="stack_pill_3_2">Stack Pill 1</span>
-                    </div>
-
-                    <!-- LINKS -->
-                    <div class="project-links">
-                      <a href="https://www.behance.net/gallery/156123191/Cardapio-Digital-Confeitaria" target="_blank" class="primary-link" data-i18n="btn_behance">Behance</a>
-                      <a href="https://www.behance.net/gallery/156123191/Cardapio-Digital-Confeitaria" target="_blank" class="secondary-link" data-i18n="btn_case">Live</a>
-                    </div>
-                  </div>
-                </article>
-
-                <!-- ( outros slides continuam iguais) -->
+          <!-- TRACK -->
+          <div id="design-carousel" class="flex gap-24 will-change-transform w-max">
+            <!-- SLIDE 1 -->
+            <article class="carousel-slide min-w-[80vw] lg:min-w-[65vw] flex flex-col items-center">
+              <!-- PREVIEW  -->
+              <div class="project-preview">
+                <img
+                  src="/assets/images/slide_mb.jpg"
+                  alt="Moura Burger - Hamburgueria"
+                  loading="lazy"
+                />
               </div>
 
-              <!-- SETAS LATERAIS -->
-              <button
-                type="button"
-                class="carousel-nav left"
-                aria-label="Previous design slide"
-                onclick="moveDesignSlide(-1)"
-              >
-                <svg viewBox="0 0 24 24" aria-hidden="true" class="chev">
-                  <path
-                    d="M14.5 5.5 8.5 12l6 6.5"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2.2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                </svg>
-              </button>
+              <!-- TEXTO  -->
+              <div class="project-meta">
+                <h3 class="project-title" data-i18n="proj_design_title_1">Project Title</h3>
 
-              <button
-                type="button"
-                class="carousel-nav right"
-                aria-label="Next design slide"
-                onclick="moveDesignSlide(1)"
-              >
-                <svg viewBox="0 0 24 24" aria-hidden="true" class="chev">
-                  <path
-                    d="M9.5 5.5 15.5 12l-6 6.5"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2.2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                </svg>
-              </button>
-            </div>
+                <p class="project-desc" data-i18n="proj_design_desc_1">
+                  Project Description.
+                </p>
+
+                <!-- STACKS  -->
+                <div class="project-stacks" aria-label="Stacks">
+                  <span class="stack-pill" data-i18n="stack_pill_1_1">Stack Pill 1</span>
+                  <span class="stack-pill" data-i18n="stack_pill_1_2">Stack Pill 2</span>
+                  <span class="stack-pill" data-i18n="stack_pill_1_3">Stack Pill 3</span>
+                </div>
+
+                <!-- LINKS -->
+                <div class="project-links">
+                  <a href="https://www.behance.net/gallery/156120573/Moura-Burger" target="_blank" class="primary-link" data-i18n="btn_behance">Behance</a>
+                  <a href="https://www.instagram.com/mouraburgergrill?igsh=MTZmMXdnbHFuM3V5eg==" target="_blank" class="secondary-link" data-i18n="btn_case">Live</a>
+                </div>
+              </div>
+            </article>
+
+            <!-- SLIDE 2 -->
+            <article class="carousel-slide min-w-[80vw] lg:min-w-[65vw] flex flex-col items-center">
+              <!-- PREVIEW  -->
+              <div class="project-preview">
+                <img
+                  src="/assets/images/slide_ra.jpg"
+                  alt="Raquel Alves - Engenheira Civil"
+                  loading="lazy"
+                />
+              </div>
+
+              <!-- TEXTO  -->
+              <div class="project-meta">
+                <h3 class="project-title" data-i18n="proj_design_title_2">Project Title</h3>
+
+                <p class="project-desc" data-i18n="proj_design_desc_2">
+                  Project Description
+                </p>
+
+                <!-- STACKS  -->
+                <div class="project-stacks" aria-label="Stacks">
+                  <span class="stack-pill" data-i18n="stack_pill_2_1">Stack Pill 1</span>
+                  <span class="stack-pill" data-i18n="stack_pill_2_2">Stack Pill 2</span>
+                  <span class="stack-pill" data-i18n="stack_pill_2_3">Stack Pill 3</span>
+                </div>
+
+                <!-- LINKS -->
+                <div class="project-links">
+                  <a href="https://www.behance.net/gallery/156121781/Engenheira-Civil-RA" target="_blank" class="primary-link" data-i18n="btn_behance">Behance</a>
+                  <a href="https://www.behance.net/gallery/156121781/Engenheira-Civil-RA" target="_blank" class="secondary-link" data-i18n="btn_case">Live</a>
+                </div>
+              </div>
+            </article>
+
+            <!-- SLIDE 3 -->
+            <article class="carousel-slide min-w-[80vw] lg:min-w-[65vw] flex flex-col items-center">
+              <!-- PREVIEW  -->
+              <div class="project-preview">
+                <img
+                  src="/assets/images/slide_ma.jpg"
+                  alt="Chocolate - Doces"
+                  loading="lazy"
+                />
+              </div>
+
+              <!-- TEXTO  -->
+              <div class="project-meta">
+                <h3 class="project-title" data-i18n="proj_design_title_3">Project Title</h3>
+
+                <p class="project-desc" data-i18n="proj_design_desc_3">
+                  Project Description
+                </p>
+
+                <!-- STACKS  -->
+                <div class="project-stacks" aria-label="Stacks">
+                  <span class="stack-pill" data-i18n="stack_pill_3_1">Stack Pill 1</span>
+                  <span class="stack-pill" data-i18n="stack_pill_3_2">Stack Pill 1</span>
+                </div>
+
+                <!-- LINKS -->
+                <div class="project-links">
+                  <a href="https://www.behance.net/gallery/156123191/Cardapio-Digital-Confeitaria" target="_blank" class="primary-link" data-i18n="btn_behance">Behance</a>
+                  <a href="https://www.behance.net/gallery/156123191/Cardapio-Digital-Confeitaria" target="_blank" class="secondary-link" data-i18n="btn_case">Live</a>
+                </div>
+              </div>
+            </article>
           </div>
+
+          <!-- SETAS LATERAIS -->
+          <button
+            type="button"
+            class="carousel-nav left"
+            aria-label="Previous design slide"
+            onclick="moveDesignSlide(-1)"
+          >
+            <svg viewBox="0 0 24 24" aria-hidden="true" class="chev">
+              <path
+                d="M14.5 5.5 8.5 12l6 6.5"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2.2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </button>
+
+          <button
+            type="button"
+            class="carousel-nav right"
+            aria-label="Next design slide"
+            onclick="moveDesignSlide(1)"
+          >
+            <svg viewBox="0 0 24 24" aria-hidden="true" class="chev">
+              <path
+                d="M9.5 5.5 15.5 12l-6 6.5"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2.2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </button>
+
         </div>
       </div>
-    </section>
+    </div>
+
+  </div>
+</section>
+
 
 
 <section id="dev-projects"
@@ -1305,8 +1300,6 @@
     
     </section>
 
-    <div class="dev-bottom-space" aria-hidden="true"></div>
-  </div>
     
 <section id="contact" class="snap-start min-h-screen w-full flex">
   <div class="w-full">
@@ -1551,13 +1544,13 @@
 </section>
   </main>
 
-<!-- I18N (local com fallback demo) -->
+<!-- I18N --> 
 <script src="/js/i18n.demo.js" onerror="loadDemoI18N()"></script>
 
-  <!-- CONFIG (local com fallback demo) -->
+  <!-- CONFIG  -->
   <script src="/js/config.demo.js"></script>
 
-  <!-- Vite entry (carrega main.css + seu src/js/main.js) -->
+  <!-- Vite entry  -->
   <script type="module" src="/src/main.js"></script>
 </body>
 </html>
